# generic_sql

./: CMakeLists.txt  README.md
include/: export.h  generic_repository.h  generic_repository.hpp  generic_table.h  i_sql_query.h  sql_query.h
src/: generic_table.cpp  sql_query.cpp
tests/: CMakeLists.txt  mock_sql_query.cpp  mock_sql_query.h  test_generic_repository.cpp  test_generic_repository.h  testing_entity.cpp  testing_entity.h
